--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bluetooth.leo.bluetoothcommunication">
 
-    <uses-feature
-        android:name="android.hardware.bluetooth_le" />
-
+    <uses-feature android:name="android.hardware.bluetooth_le" />
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -22,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BluetoothDetailInfoActivity"></activity>
+        <activity android:name=".BluetoothDetailInfoActivity" />
+        <activity android:name=".CommandDetailActivity"></activity>
     </application>
 
 </manifest>
