--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bluetooth.leo.bluetoothcommunication">
 
-    <uses-feature android:name="android.hardware.bluetooth_le" />
+    <uses-feature android:name="android.hardware.bluetooth_le"
+        android:required="true"/>
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.NFC" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +24,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".BluetoothDetailInfoActivity" />
-        <activity android:name=".CommandDetailActivity"></activity>
+        <activity android:name=".CommandDetailActivity"/>
+
+        <service
+            android:name=".dfu.DfuService"
+            android:label="dfu">
+            <intent-filter>
+                <action android:name="no.nordicsemi.android.action.DFU_UPLOAD" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
